--- a/index.html
+++ b/index.html
@@ -64,5 +64,8 @@
         <ul>
             <li><a href="homework14/cahee full/index">Cahee SCSS</a></li>
         </ul>
+        <ul>
+            <li><a href="exam/index">My exam</a></li>
+        </ul>
     </body>
 </html>
