--- a/exam/index.html
+++ b/exam/index.html
@@ -16,7 +16,17 @@
     <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#2d89ef">
     <meta name="theme-color" content="#ffffff">
-    <title>EXAM</title>
+    
+    <meta property="og:locale" content="uk_UA">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Bhromaon">
+    <meta property="og:description" content="It`s my first work with large website.">
+    <meta name="description" content="Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee">
+    <meta property="og:url" content="https://gadkiy.github.io/githomework/homework14/cahee%20full/index">
+    <meta property="og:site_name" content="Cahee">
+    <meta property="og:image" content="https://gadkiy.github.io/githomework/homework14/cahee%20full/assets/img/opg_image.png">
+
+    <title>Bhromaon</title>
 </head>
 <body>
     
