--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <li><a href="homework14/cahee full/index">Cahee SCSS</a></li>
         </ul>
         <ul>
-            <li><a href="exam/index">My exam</a></li>
+            <li><a href="Bhromaon/index">My exam</a></li>
         </ul>
     </body>
 </html>
