--- a/Bhromaon/index.html
+++ b/Bhromaon/index.html
@@ -20,11 +20,11 @@
     <meta property="og:locale" content="uk_UA">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Bhromaon">
-    <meta property="og:description" content="It`s my first work with large website.">
+    <meta property="og:description" content="Safe Travel Anywhere">
     <meta name="description" content="Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee">
-    <meta property="og:url" content="https://gadkiy.github.io/githomework/homework14/cahee%20full/index">
+    <meta property="og:url" content="https://gadkiy.github.io/githomework/Bhromaon/index">
     <meta property="og:site_name" content="Cahee">
-    <meta property="og:image" content="https://gadkiy.github.io/githomework/homework14/cahee%20full/assets/img/opg_image.png">
+    <meta property="og:image" content="">
 
     <title>Bhromaon</title>
 </head>
