--- a/Bhromaon/index.html
+++ b/Bhromaon/index.html
@@ -24,6 +24,8 @@
     <meta name="description" content="Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee">
     <meta property="og:url" content="https://gadkiy.github.io/githomework/Bhromaon/index">
     <meta property="og:site_name" content="Brohmaon">
+    <meta property="og:image:width" content="600">
+    <meta property="og:image:height" content="600">
     <meta property="og:image" content="">
 
     <title>Bhromaon</title>
