--- a/Bhromaon/index.html
+++ b/Bhromaon/index.html
@@ -26,7 +26,7 @@
     <meta property="og:site_name" content="Brohmaon">
     <meta property="og:image:width" content="600">
     <meta property="og:image:height" content="600">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://gadkiy.github.io/githomework/Bhromaon/assets/img/sitepicture.png">
 
     <title>Bhromaon</title>
 </head>
