Bug fix in HTML

--- a/Bhromaon/index.html
+++ b/Bhromaon/index.html
@@ -102,10 +102,10 @@
                     </div>
                     <div class="block_wrap image_wrap">
                         <div class="image_inner">
-                            <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw==" alt="house" srcset="assets/img/house.png">
+                            <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw==" alt="house" data-src="assets/img/house.png">
                         </div>
                         <div class="image image_inner2">                                
-                            <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw==" alt="mountains" srcset="assets/img/mountains.png">                            
+                            <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw==" alt="mountains" data-src="assets/img/mountains.png">                            
                         </div>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                     </h2>
                     <div class="review_block">
                                                     
-                            <img class="review_img lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw==" alt="man" srcset="assets/img/man.png">                            
+                            <img class="review_img lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw==" alt="man" data-src="assets/img/man.png">                            
                         
                         <div class="review_text">
                             <div class="review_name">Sam Sumon</div>
