--- a/Bhromaon/index.html
+++ b/Bhromaon/index.html
@@ -187,11 +187,11 @@
                 </div>
                 <div class="footer_soc">
                     <ul class="footer_soc-list">
-                        <li class="soc_item"><a class="facebook" href="https://www.facebook.com/" target="_blank"><i class="icon icon-facebook"></i></a></li>
-                        <li class="soc_item"><a class="twitter" href="https://twitter.com/?lang=ru" target="_blank"><i class="icon icon-twitter"></i></a></li>
-                        <li class="soc_item"><a class="linkedin" href="https://www.linkedin.com/" target="_blank"><i class="icon icon-linkedin2"></i></a></li>
-                        <li class="soc_item"><a class="youtube" href="https://www.youtube.com/" target="_blank"><i class="icon icon-youtube"></i></a></li>
-                        <li class="soc_item"><a class="pinterest" href="https://www.pinterest.ru/" target="_blank"><i class="icon icon-pinterest"></i></a></li>
+                        <li class="soc_item"><a class="facebook" href="https://www.facebook.com/" target="_blank" rel="noreferrer nofollow"><i class="icon icon-facebook"></i></a></li>
+                        <li class="soc_item"><a class="twitter" href="https://twitter.com/?lang=ru" target="_blank" rel="noreferrer nofollow"><i class="icon icon-twitter"></i></a></li>
+                        <li class="soc_item"><a class="linkedin" href="https://www.linkedin.com/" target="_blank" rel="noreferrer nofollow"><i class="icon icon-linkedin2"></i></a></li>
+                        <li class="soc_item"><a class="youtube" href="https://www.youtube.com/" target="_blank" rel="noreferrer nofollow"><i class="icon icon-youtube"></i></a></li>
+                        <li class="soc_item"><a class="pinterest" href="https://www.pinterest.ru/" target="_blank" rel="noreferrer nofollow"><i class="icon icon-pinterest"></i></a></li>
                     </ul>
                 </div>
             </div>
