--- a/Bhromaon/index.html
+++ b/Bhromaon/index.html
@@ -20,16 +20,16 @@
     <meta name="robots" content="all" />
     <meta name="revisit-after" content="1 days" />
     
-    <meta property="og:locale" content="uk_UA">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Bhromaon">
-    <meta property="og:description" content="Safe Travel Anywhere">
-    <meta name="description" content="Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee">
-    <meta property="og:url" content="https://gadkiy.github.io/githomework/Bhromaon/index">
-    <meta property="og:site_name" content="Brohmaon">
-    <meta property="og:image:width" content="600">
-    <meta property="og:image:height" content="600">
-    <meta property="og:image" content="https://gadkiy.github.io/githomework/Bhromaon/assets/img/sitepicture.png">
+    <meta property="og:locale" content="uk_UA" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Bhromaon" />
+    <meta property="og:description" content="Safe Travel Anywhere" />
+    <meta name="description" content="Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee" />
+    <meta property="og:url" content="https://gadkiy.github.io/githomework/Bhromaon/index" />
+    <meta property="og:site_name" content="Brohmaon" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="600" />
+    <meta property="og:image" content="https://gadkiy.github.io/githomework/Bhromaon/assets/img/sitepicture.png" />
 
     <title>Bhromaon</title>
 </head>
