Homework with JS

--- a/index.html
+++ b/index.html
@@ -64,8 +64,13 @@
         <ul>
             <li><a href="homework14/cahee full/index">Cahee SCSS</a></li>
         </ul>
+        <h2>Exam</h2>
         <ul>
             <li><a href="Bhromaon/index">My exam</a></li>
+        </ul>
+        <h2>JS</h2>
+        <ul>
+            <li><a href="homework22/index">Working with Java Script</a></li>
         </ul>
     </body>
 </html>
