--- a/index.html
+++ b/index.html
@@ -68,9 +68,13 @@
         <ul>
             <li><a href="Bhromaon/index">My exam</a></li>
         </ul>
-        <h2>JS</h2>
+        <h2>JS basics</h2>
         <ul>
             <li><a href="homework22/index">Working with Java Script</a></li>
+        </ul>
+        <h2>JS type of data</h2>
+        <ul>
+            <li><a href="homework23/index">Type of data in JS</a></li>
         </ul>
     </body>
 </html>
