--- a/index.html
+++ b/index.html
@@ -76,5 +76,9 @@
         <ul>
             <li><a href="homework23/index">Type of data in JS</a></li>
         </ul>
+        <h2>JS Cycles</h2>
+        <ul>
+            <li><a href="homework24/index">Cycles</a></li>
+        </ul>
     </body>
 </html>
