--- a/homework24/index.html
+++ b/homework24/index.html
@@ -78,7 +78,7 @@
             </div>
         </div>
         <hr>
-        <!-- <div class="row">
+        <div class="row">
             <p>Задача №7 сдвигаем число</p>
             <div class="col-2">                
                 <input type="number" class="form-control" id="parseNumber">
@@ -90,7 +90,7 @@
                 <button type="button" class="btn btn-outline-success" onclick="move()">GO</button>
             </div>
             <div class="col-6" id="move_rez"></div>            
-        </div> -->
+        </div>
         <hr>
         <div class="row">
             <p>Задача №8 Дата</p>
@@ -99,16 +99,30 @@
             </div>
         </div>
         <hr>
-        <!-- <div class="row">
-            <p>Задача №9</p>
-            <div class="col-4">
-                <input type="number" class="form-control" id="multiply">
-            </div>
-            <div class="col-2">
+        <div class="row">
+            <p>Задача №9</p>            
+            <div class="col-6">
                 <button type="button" class="btn btn-outline-success" onclick="multiply()">GO</button>
             </div>
             <div class="col-6" id="multiply_rez"></div> 
-        </div> -->
+        </div>
+        <hr>
+         <div class="row">
+            <p>Задача №10 Угадай число</p>
+            <div class="col-2"> 
+                <p>Введи число от</p>               
+                <input type="number" value="1" class="form-control" id="numberFrom">
+            </div>
+            <div class="col-2">
+                <p>Введи число до</p>
+                <input type="number" value="100" class="form-control" id="numberTo">
+            </div>
+            <div class="col-2">
+                <button type="button" class="btn btn-outline-success" onclick="ridle()">GO</button>
+            </div>
+            <div class="col-6" id="ridle_rez"></div>            
+        </div>
+
     </div>
 
 
