Add homework with functions

--- a/index.html
+++ b/index.html
@@ -80,5 +80,9 @@
         <ul>
             <li><a href="homework24/index">Cycles</a></li>
         </ul>
+        <h2>JS Functions</h2>
+        <ul>
+            <li><a href="homework25/index">Functions</a></li>
+        </ul>
     </body>
 </html>
