--- a/index.html
+++ b/index.html
@@ -84,5 +84,9 @@
         <ul>
             <li><a href="homework25/index">Functions</a></li>
         </ul>
+        <h2>Objects</h2>
+        <ul>
+            <li><a href="homework26/index">Objects</a></li>
+        </ul>
     </body>
 </html>
