add third task in homework with objects

--- a/homework26/index.html
+++ b/homework26/index.html
@@ -70,6 +70,23 @@
             </div>
 
         </div>
+        <hr>
+        <div class="row">
+            <div class="col-4">
+                <p>Hours</p>
+                <input type="number" class="form-control" id="hours" name="time">
+                <p>Minutes</p>
+                <input type="number" class="form-control" id="minutes" name="time">
+                <p>Seconds</p>
+                <input type="number" class="form-control" id="seconds" name="time">
+            </div>
+            <div class="col-4">
+                <button type="button" class="btn btn-outline-success" onclick="time()">GO</button>
+            </div>
+            <div class="col-4">
+                <div id="time_rez"></div>
+            </div>
+        </div>
     
         
     </div>
