Add Grid homework

--- a/index.html
+++ b/index.html
@@ -88,5 +88,9 @@
         <ul>
             <li><a href="homework26/index">Objects</a></li>
         </ul>
+        <h2>Homework 27 GRID</h2>
+        <ul>
+            <li><a href="homework27/index">Grid layout</a></li>
+        </ul>
     </body>
 </html>
