--- a/index.html
+++ b/index.html
@@ -92,5 +92,9 @@
         <ul>
             <li><a href="homework27/index">Grid layout</a></li>
         </ul>
+        <h2>Arrays</h2>
+        <ul>
+            <li><a href="Homework28/index">Arrays</a></li>
+        </ul>
     </body>
 </html>
