Add homework DOM

--- a/index.html
+++ b/index.html
@@ -96,5 +96,9 @@
         <ul>
             <li><a href="Homework28/index">Arrays</a></li>
         </ul>
+        <h2>DOM</h2>
+        <ul>
+            <li><a href="homework30/index">DOM</a></li>
+        </ul>
     </body>
 </html>
