--- a/index.html
+++ b/index.html
@@ -100,5 +100,9 @@
         <ul>
             <li><a href="homework30/index">DOM</a></li>
         </ul>
+        <h2>Slider</h2>
+        <ul>
+            <li><a href="homework32/index">Slider</a></li>
+        </ul>
     </body>
 </html>
