--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
         <ul>
             <li><a href="homework30/index">DOM</a></li>
         </ul>
+        <h2>TABS</h2>
+        <ul>
+            <li><a href="homework33/tabs/index"></a>Tabs</li>
+        </ul>
         <h2>Slider</h2>
         <ul>
             <li><a href="homework32/index">Slider</a></li>
