--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </ul>
         <h2>TABS</h2>
         <ul>
-            <li><a href="homework33/tabs/index"></a>Tabs</li>
+            <li><a href="homework33/tabs/index">Tabs</a></li>
         </ul>
         <h2>Slider</h2>
         <ul>
