--- a/homework33/tabs/index.html
+++ b/homework33/tabs/index.html
@@ -93,7 +93,23 @@
                 </div>
             </div>
             <div class="product_card_body" id="ratings">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam voluptate sit quo error atque eius tempora, incidunt placeat at debitis mollitia eaque impedit inventore ea ipsa rem est itaque, soluta aut vero. Sunt suscipit ut ipsum repellat eius eveniet molestiae ullam reiciendis sequi, corrupti id eum aut inventore voluptates ab, totam quidem adipisci nulla nesciunt distinctio dolorum laudantium quaerat dolor unde? Nulla, vero perspiciatis, est dolores inventore assumenda quia distinctio perferendis, quas mollitia amet veritatis nihil optio esse minima error aperiam iusto eum? Quisquam eum asperiores ea praesentium, ad, ducimus cupiditate odit recusandae tempore alias excepturi, fugiat delectus. Impedit, porro?</p>
+                <div class="product_card_cover_wrap">
+                    <div class="product_card_image_wrap">
+                        <img src="assets/img/gamecover.png" alt="gamecover">
+                    </div>
+                    <div class="product_card_rating rating rating2">
+                        <!--
+                		--><a href="#5" title="Give 5 stars">★</a>
+                        <!--
+                		--><a href="#4" title="Give 4 stars">★</a>
+                        <!--
+                		--><a href="#3" title="Give 3 stars">★</a>
+                        <!--
+                		--><a href="#2" title="Give 2 stars">★</a>
+                        <!--
+                		--><a href="#1" title="Give 1 star">★</a>
+                    </div>
+                </div>
             </div>
             <div class="product_card_body" id="buy">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam voluptate sit quo error atque eius
