Add animations for tabs content

--- a/homework33/tabs/index.html
+++ b/homework33/tabs/index.html
@@ -46,6 +46,7 @@
                     </li>
                 </ul>
             </div>
+            <div class="fade">
             <div class="product_card_body active" id="information">
                 <div class="product_card_cover_wrap">
                     <div class="product_card_image_wrap">
@@ -120,6 +121,7 @@
                     perferendis, quas mollitia amet veritatis nihil optio esse minima error aperiam iusto eum? Quisquam
                     eum asperiores ea praesentium, ad, ducimus cupiditate odit recusandae tempore alias excepturi,
                     fugiat delectus. Impedit, porro?2</p>
+            </div>
             </div>
         </div>
     </section>
