--- a/index.html
+++ b/index.html
@@ -108,5 +108,9 @@
         <ul>
             <li><a href="homework32/index">Slider</a></li>
         </ul>
+        <h2>Maps</h2>
+        <ul>
+            <li><a href="homework35/map/index">Map</a></li>
+        </ul>
     </body>
 </html>
