add design lab with animations and responsive

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
         <ul>
             <li><a href="Homework28/index">Arrays</a></li>
         </ul>
+        <h2>Classes</h2>
+        <ul>
+            <li><a href="homework29/index">Classes</a></li>
+        </ul>
         <h2>DOM</h2>
         <ul>
             <li><a href="homework30/index">DOM</a></li>
@@ -111,6 +115,10 @@
         <h2>Maps</h2>
         <ul>
             <li><a href="homework35/map/index">Map</a></li>
+        </ul>
+        <h2>Animations: "Design Lab"</h2>
+        <ul>
+            <li><a href="homework36/animations/index"></a></li>
         </ul>
     </body>
 </html>
