--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </ul>
         <h2>Animations: "Design Lab"</h2>
         <ul>
-            <li><a href="homework36/animations/index"></a></li>
+            <li><a href="homework36/animations/index">Design Lab</a></li>
         </ul>
     </body>
 </html>
